# server/src/main/kotlin/com/yawa/server/api/users/deletion/SendUserDeletionToken.kt
@@ -3,19 +3,16 @@ package com.yawa.server.api.users.deletion
 import com.yawa.server.constants.OpenApiTags.USERS
 import com.yawa.server.models.tokens.TokenAction
 import com.yawa.server.models.users.User
-import com.yawa.server.models.users.UserPrincipal
 import com.yawa.server.notifications.MailService
 import com.yawa.server.notifications.MailType
 import com.yawa.server.security.tokens.ActionTokenService
 import com.yawa.server.services.UserService
-import com.yawa.server.validators.Email
 import io.swagger.v3.oas.annotations.Operation
 import mu.KotlinLogging
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.MediaType
 import org.springframework.security.core.annotation.AuthenticationPrincipal
 import org.springframework.web.bind.annotation.PostMapping
-import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RestController
 
 private val log = KotlinLogging.logger {}
@@ -31,9 +28,8 @@ class SendUserDeletionToken(
     @PostMapping("/users/me/deletion/token", produces = [MediaType.APPLICATION_JSON_VALUE])
     fun sendUserDeletionToken(
         @AuthenticationPrincipal user: User,
-        @RequestBody request: SendUserDeletionTokenRequest,
     ): SendUserDeletionTokenResponse {
-        log.info("Processing request for user ${user.id}: $request")
+        log.info("Processing request for user ${user.id}")
 
         val actionToken = actionTokenService.generateToken(user = user, action = TokenAction.CONFIRM_USER_DELETION)
 
@@ -43,17 +39,13 @@ class SendUserDeletionToken(
             attributes = mapOf(
                 "firstname" to user.profile!!.firstname!!,
                 "token" to actionToken.token,
-                "action" to "DeleteUser",
+                "action" to "auth/delete-user",
                 "expiration" to actionToken.expiration.toString(),
             ),
         )
 
         return SendUserDeletionTokenResponse("Deletion token for user ${user.id} will be sent to user email")
     }
-
-    data class SendUserDeletionTokenRequest(
-        @Email val email: String = "",
-    )
 
     data class SendUserDeletionTokenResponse(val message: String)
 }
